--- a/config/app.toml
+++ b/config/app.toml
@@ -11,7 +11,7 @@ enable = true
 swagger = false
 
 # Address defines the API server to listen on.
-address = "tcp://explorermdc.duckdns.org"
+address = "https://explorermdc.duckdns.org"
 
 # MaxOpenConnections defines the number of maximum open connections.
 max-open-connections = 1000
